--- a/src/main/webapp/static/common/fastsitebs3.css
+++ b/src/main/webapp/static/common/fastsitebs3.css
@@ -74,3 +74,9 @@ div.jbox .jbox-title-panel {
 	border: 1px solid #e4e7ea!important;
 	padding: 7px 12px;
 }
+
+.table-btn{
+	font-size: 12px;
+	color: #fff!important;
+	padding: 1px 8px!important;
+}
